// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`HeaderMiddle component > renders with NEXT_PUBLIC_VERIFY environment variable not set 1`] = `
<div>
  <div
    class="MuiToolbar-root MuiToolbar-gutters MuiToolbar-regular header-middle css-1hs65z2-MuiToolbar-root"
  >
    <div
      class="MuiContainer-root MuiContainer-maxWidthLg MuiContainer-disableGutters css-ho17r4-MuiContainer-root"
    >
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-1cbysey-MuiGrid-root"
      >
        <div
          class="MuiGrid-root css-vj1n65-MuiGrid-root"
        >
          <h6
            class="MuiTypography-root MuiTypography-h6 css-1miy0lu-MuiTypography-root"
          >
            OBS! Dette er en verifiseringsside for testdata. Hvis du ønsker å se offisielle tall må du gå til
             
            <a
              href="https://apps.skde.no/test-path"
              target="_self"
            >
              www.skde.no.
            </a>
          </h6>
          <br />
          <h1
            class="MuiTypography-root MuiTypography-h1 css-10l7o3s-MuiTypography-root"
          >
            Custom Title
          </h1>
        </div>
        <div
          class="MuiGrid-root css-vj1n65-MuiGrid-root"
        >
          <h6
            class="MuiTypography-root MuiTypography-h6 css-1miy0lu-MuiTypography-root"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`HeaderMiddle component > renders with NEXT_PUBLIC_VERIFY environment variable set 1`] = `
<div>
  <div
    class="MuiToolbar-root MuiToolbar-gutters MuiToolbar-regular header-middle css-1hs65z2-MuiToolbar-root"
  >
    <div
      class="MuiContainer-root MuiContainer-maxWidthLg MuiContainer-disableGutters css-ho17r4-MuiContainer-root"
    >
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-1cbysey-MuiGrid-root"
      >
        <div
          class="MuiGrid-root css-vj1n65-MuiGrid-root"
        >
          <h6
            class="MuiTypography-root MuiTypography-h6 css-1miy0lu-MuiTypography-root"
          >
            OBS! Dette er en verifiseringsside for testdata. Hvis du ønsker å se offisielle tall må du gå til
             
            <a
              href="https://apps.skde.no/test-path"
              target="_self"
            >
              www.skde.no.
            </a>
          </h6>
          <br />
          <h1
            class="MuiTypography-root MuiTypography-h1 css-10l7o3s-MuiTypography-root"
          >
            Custom Title
          </h1>
        </div>
        <div
          class="MuiGrid-root css-vj1n65-MuiGrid-root"
        >
          <h6
            class="MuiTypography-root MuiTypography-h6 css-1miy0lu-MuiTypography-root"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`HeaderMiddle component > renders with custom background color 1`] = `
<div>
  <div
    class="MuiToolbar-root MuiToolbar-gutters MuiToolbar-regular header-middle css-bvelj9-MuiToolbar-root"
  >
    <div
      class="MuiContainer-root MuiContainer-maxWidthLg MuiContainer-disableGutters css-ho17r4-MuiContainer-root"
    >
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-1cbysey-MuiGrid-root"
      >
        <div
          class="MuiGrid-root css-vj1n65-MuiGrid-root"
        >
          <h1
            class="MuiTypography-root MuiTypography-h1 css-10l7o3s-MuiTypography-root"
          >
            Custom Title
          </h1>
        </div>
        <div
          class="MuiGrid-root css-vj1n65-MuiGrid-root"
        >
          <h6
            class="MuiTypography-root MuiTypography-h6 css-1miy0lu-MuiTypography-root"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`HeaderMiddle component > renders with custom maximum width 1`] = `
<div>
  <div
    class="MuiToolbar-root MuiToolbar-gutters MuiToolbar-regular header-middle css-1di5y52-MuiToolbar-root"
  >
    <div
      class="MuiContainer-root MuiContainer-maxWidthLg MuiContainer-disableGutters css-ho17r4-MuiContainer-root"
    >
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-1cbysey-MuiGrid-root"
      >
        <div
          class="MuiGrid-root css-vj1n65-MuiGrid-root"
        >
          <h1
            class="MuiTypography-root MuiTypography-h1 css-10l7o3s-MuiTypography-root"
          >
            Custom Title
          </h1>
        </div>
        <div
          class="MuiGrid-root css-vj1n65-MuiGrid-root"
        >
          <h6
            class="MuiTypography-root MuiTypography-h6 css-1miy0lu-MuiTypography-root"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`HeaderMiddle component > renders with custom title and children 1`] = `
<div>
  <div
    class="MuiToolbar-root MuiToolbar-gutters MuiToolbar-regular header-middle css-1di5y52-MuiToolbar-root"
  >
    <div
      class="MuiContainer-root MuiContainer-maxWidthLg MuiContainer-disableGutters css-ho17r4-MuiContainer-root"
    >
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-1cbysey-MuiGrid-root"
      >
        <div
          class="MuiGrid-root css-vj1n65-MuiGrid-root"
        >
          <h1
            class="MuiTypography-root MuiTypography-h1 css-10l7o3s-MuiTypography-root"
          >
            Custom Title
          </h1>
        </div>
        <div
          class="MuiGrid-root css-vj1n65-MuiGrid-root"
        >
          <h6
            class="MuiTypography-root MuiTypography-h6 css-1miy0lu-MuiTypography-root"
          >
            Custom Children
          </h6>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`HeaderMiddle component > renders with default props 1`] = `
<div>
  <div
    class="MuiToolbar-root MuiToolbar-gutters MuiToolbar-regular header-middle css-1di5y52-MuiToolbar-root"
  >
    <div
      class="MuiContainer-root MuiContainer-maxWidthLg MuiContainer-disableGutters css-ho17r4-MuiContainer-root"
    >
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-1cbysey-MuiGrid-root"
      >
        <div
          class="MuiGrid-root css-vj1n65-MuiGrid-root"
        >
          <h1
            class="MuiTypography-root MuiTypography-h1 css-10l7o3s-MuiTypography-root"
          >
            Default Title
          </h1>
        </div>
        <div
          class="MuiGrid-root css-vj1n65-MuiGrid-root"
        >
          <h6
            class="MuiTypography-root MuiTypography-h6 css-1miy0lu-MuiTypography-root"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
